@@ -18,7 +18,7 @@ public class CsvExporter {
             double sum=0.0;
             for (Order o : orders){
                 for (OrderItem i : o.getItems()) {
-                    Product p = products.stream().filter((p1)->i.getProduct().getId()==p1.getId()).toList().get(0);
+                    Product p = products.stream().filter((p1)->i.getProduct().getId()==p1.getId()).collect(Collectors.toList()).get(0);
                     w.write(o.getId() + "," + p.getNume() + "," + i.getQuantity() + "," + i.getTotal() + "\n");
                 }
                 w.write("total order: "+o.getTotalPrice()+" RON\n");
