@@ -17,7 +17,7 @@ public abstract class AbstractRepository<ID, E>
 
     @Override
     public List<E> findAll() {
-        return StreamSupport.stream(entities.values().spliterator(), false).toList();
+        return StreamSupport.stream(entities.values().spliterator(), false).collect(Collectors.toList());
 //                    .collect(Collectors.toList());
         // return (List<E>) entities.values();
     }
